# my-skills

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
skills-inventory/: index.html  package-lock.json  package.json
skills-inventory/src/: App.tsx  styles.css
skills-inventory/src-tauri/: Cargo.toml  tauri.conf.json
skills-inventory/src-tauri/capabilities/: default.json
skills-inventory/src-tauri/src/: lib.rs  main.rs
