[project]
name = "my-skills"
version = "0.1.0"
description = "My Claude Code skills repository"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-skills = "main:main"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.hatch.build.targets.wheel]
packages = ["."]
