[package]
name = "skills-inventory"
version = "0.1.0"
description = "Skills Inventory - A desktop app to scan and manage Claude Code skills"
authors = ["you"]
edition = "2021"

[lib]
name = "skills_inventory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
zip = "2"
base64 = "0.22"
