[package]
name = "skills-hub"
version = "0.1.0"
description = "Skills Hub - A central hub for managing Claude Code skills with version control"
authors = ["you"]
edition = "2021"

[lib]
name = "skills_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "5"
zip = "2"
base64 = "0.22"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
